syntax = "proto3";

package openraftpb;

// SetRequest represents a key-value pair to be stored
message SetRequest {
  string key = 1;   // Key to store
  string value = 2; // Value to associate with the key
}

// GetRequest represents a key lookup request
message GetRequest {
  string key = 1; // Key to look up
}

// GetResponse contains the value associated with the requested key
message Response {
  optional string value = 1; // Retrieved value
}
